# ParallelLifeGame

./: .gitignore  README.md
code/: CMakeLists.txt  barrier.hpp  executor.hpp  life_game.hpp  main.cpp
code_MPI/: CMakeLists.txt  life_game_master.hpp  life_game_mpi.hpp  life_game_slaver.hpp  main.cpp
initial_disposition/: disp_one.csv  glider.csv
